# SYS-101-00030-Federated-Learning

./: Cargo.toml  README - Copy.md  README.md  build.rs
examples/: demo.rs
proto/: federated_learning.proto
src/: common.rs  data.rs  generated.rs  lib.rs
