[package]
name = "federated-learning"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "simple_demo"
path = "src/bin/simple_demo.rs"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.9"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
log = "0.4"
env_logger = "0.10"
ndarray = "0.15"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
flate2 = "1.0"
byteorder = "1.4"

[features]
grpc = []

